# csv2sql

./: .gitignore  .pdm-python  Pipfile  README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
csv2sql/: ER Diagram Models.txt  __init__.py  __main__.py  evtss.py
csv2sql/evtss_2023/: __init__.py  constants.py  convert.py  data_insertion.py  tables.py  tables_schema.py
csv2sql/evtss_2024/: __init__.py  convert.py  data_insertion.py  table_schema.py
