[project]
name = "csv2sql"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "0xm1cx", email = "shawnlovecode14@gmail.com"},
]
dependencies = ["setuptools>=75.8.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
